<resources>
    <string name="app_name">Slay_With_Less_Always</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="description">Description</string>
    <string name="item_name">Item Name</string>
    <string name="add_new_item">Add New Item</string>
    <string name="available">Available</string>
    <string name="submit">Submit</string>
    <string name="select_currency">Select Currency</string>
    <string name="reserved">Reserved</string>
    <string name="sold">Sold</string>
    <string name="tap_for_mor_details">Tap for mor details</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_new">Add New</string>
    <string name="log_out">Log Out</string>
</resources>
